--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "phpunit/phpunit": "^4.7",
+        "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
         "psr-4": {
